--- a/index.html
+++ b/index.html
@@ -1,201 +1,123 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login and Register Page</title>
+    <title>Login & Register</title>
     <style>
-        /* Keep the same CSS as before */
-        @import url(https://fonts.googleapis.com/css?family=Poppins:300);
-        html {
-            height: 100%;
-        }
+        /* General styles */
         body {
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
-            background: linear-gradient(#30142b, #2772a1);
-        }
-        .login-page {
-            width: 400px;
-            padding: 8% 0 0;
-            margin: auto;
-        }
-        .form {
-            position: relative;
-            z-index: 1;
-            text-align: center;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 400px;
-            padding: 40px;
-            transform: translate(-50%, -50%);
-            background: rgba(0, 0, 0, .5);
-            box-sizing: border-box;
-            box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
-            border-radius: 10px;
-        }
-        .form input {
-            width: 100%;
-            padding: 10px 0;
-            font-size: 13px;
-            color: #fff;
-            margin-bottom: 30px;
-            border: none;
-            border-bottom: 1px solid #fff;
-            outline: none;
-            background: transparent;
-        }
-        h2 {
+            font-family: 'Arial', sans-serif;
+            background-color: #181818;
             color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
         }
-        .form .message {
-            margin: 15px 0 0;
-            color: #b3b3b3;
-            font-size: 12px;
+
+        .form-container {
+            background-color: #1e1e1e;
+            padding: 40px;
+            border-radius: 10px;
+            width: 400px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
+            text-align: center;
         }
-        .form .message a {
-            color: #289bb8;
-            text-decoration: none;
-        }
-        .form .register-form {
-            display: none;
-        }
-        .btn {
-            position: relative;
-            display: inline-block;
-            padding: 10px 20px;
-            color: #289bb8;
-            font-size: 16px;
-            text-decoration: none;
-            overflow: hidden;
-            transition: .5s;
-            margin-top: 15px;
-            letter-spacing: 2px;
-        }
-        .btn:hover {
-            background: #289bb8;
+
+        h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
             color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 5px #289bb8,
-                        0 0 25px #289bb8,
-                        0 0 50px #289bb8,
-                        0 0 100px #289bb8;
         }
-        .btn span {
-            position: absolute;
-            display: block;
-        }
-        .btn span:nth-child(1) {
-            top: 0;
-            left: -100%;
+
+        /* Input fields */
+        input {
             width: 100%;
-            height: 2px;
-            background: linear-gradient(90deg, transparent, #289bb8);
-            animation: btn-anim1 1s linear infinite;
+            padding: 12px;
+            margin: 15px 0;
+            border: 1px solid #444;
+            border-radius: 8px;
+            background-color: #2c2c2c;
+            color: white;
+            font-size: 16px;
+            transition: border-color 0.3s ease-in-out;
         }
-        @keyframes btn-anim1 {
-            0% {
-                left: -100%;
-            }
-            50%, 100% {
-                left: 100%;
-            }
+
+        input:focus {
+            outline: none;
+            border-color: #289bb8;
         }
-        .btn span:nth-child(2) {
-            top: -100%;
-            right: 0;
-            width: 2px;
-            height: 100%;
-            background: linear-gradient(180deg, transparent, #289bb8);
-            animation: btn-anim2 1s linear infinite;
-            animation-delay: .25s;
-        }
-        @keyframes btn-anim2 {
-            0% {
-                top: -100%;
-            }
-            50%, 100% {
-                top: 100%;
-            }
-        }
-        .btn span:nth-child(3) {
-            bottom: 0;
-            right: -100%;
+
+        /* Button */
+        .btn {
             width: 100%;
-            height: 2px;
-            background: linear-gradient(270deg, transparent, #289bb8);
-            animation: btn-anim3 1s linear infinite;
-            animation-delay: .5s;
+            padding: 12px;
+            background-color: #289bb8;
+            color: white;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s;
         }
-        @keyframes btn-anim3 {
-            0% {
-                right: -100%;
-            }
-            50%, 100% {
-                right: 100%;
-            }
+
+        .btn:hover {
+            background-color: #1d75a6;
         }
-        .btn span:nth-child(4) {
-            bottom: -100%;
-            left: 0;
-            width: 2px;
-            height: 100%;
-            background: linear-gradient(360deg, transparent, #289bb8);
-            animation: btn-anim4 1s linear infinite;
-            animation-delay: .75s;
+
+        /* Toggle links */
+        .toggle {
+            margin-top: 20px;
         }
-        @keyframes btn-anim4 {
-            0% {
-                bottom: -100%;
-            }
-            50%, 100% {
-                bottom: 100%;
+
+        .toggle a {
+            color: #289bb8;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        .toggle a:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 480px) {
+            .form-container {
+                width: 90%;
             }
         }
     </style>
 </head>
-<body style="display:flex; align-items:center; justify-content:center;">
-    <div class="login-page">
-        <div class="form">
-            <form class="register-form" id="register-form" method="POST">
-                <h2>Register</h2>
-                <input type="text" id="register-name" placeholder="Full Name *" required/>
-                <input type="text" id="register-username" placeholder="Username *" required/>
-                <input type="email" id="register-email" placeholder="Email *" required/>
-                <input type="password" id="register-password" placeholder="Password *" required/>
-                <a class="btn" href="#" onclick="registerUser(event)">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Create
-                </a>
-                <p class="message">Already registered? <a href="#" onclick="toggleForms()">Sign In</a></p>
-            </form>
-            <form class="login-form" id="login-form" method="POST">
-                <h2>Login</h2>
-                <input type="text" id="login-username" placeholder="Username" required />
-                <input type="password" id="login-password" placeholder="Password" required/>
-                <a class="btn" href="#" onclick="loginUser(event)">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Sign in
-                </a>
-                <p class="message">Not registered? <a href="#" onclick="toggleForms()">Create an account</a></p>
-            </form>
+<body>
+    <div class="form-container">
+        <!-- Login Form -->
+        <div class="login-form">
+            <h2>Login</h2>
+            <input type="email" id="login-email" placeholder="Email" required />
+            <input type="password" id="login-password" placeholder="Password" required />
+            <button class="btn" onclick="loginUser()">Login</button>
+            <div class="toggle">Don't have an account? <a href="#" onclick="toggleForm()">Sign Up</a></div>
+        </div>
+
+        <!-- Register Form -->
+        <div class="register-form" style="display: none;">
+            <h2>Register</h2>
+            <input type="email" id="register-email" placeholder="Email" required />
+            <input type="password" id="register-password" placeholder="Password" required />
+            <button class="btn" onclick="registerUser()">Sign Up</button>
+            <div class="toggle">Already have an account? <a href="#" onclick="toggleForm()">Login</a></div>
         </div>
     </div>
 
     <!-- Firebase SDKs -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js";
-        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js";
-        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js";
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js"></script>
 
+    <script>
+        // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
             authDomain: "remark-d4293.firebaseapp.com",
@@ -206,67 +128,68 @@
             measurementId: "G-JM3DLTB3BT"
         };
 
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.getAuth(app);
+        const db = firebase.getFirestore(app);
 
-        // Toggle between login and register forms
-        function toggleForms() {
-            const registerForm = document.querySelector('.register-form');
+        // Switch between Login and Register forms
+        function toggleForm() {
             const loginForm = document.querySelector('.login-form');
-            registerForm.style.display = registerForm.style.display === 'none' ? 'block' : 'none';
+            const registerForm = document.querySelector('.register-form');
             loginForm.style.display = loginForm.style.display === 'none' ? 'block' : 'none';
+            registerForm.style.display = registerForm.style.display === 'none' ? 'block' : 'none';
         }
 
         // Register user
-        async function registerUser(event) {
-            event.preventDefault();  // Prevent form from submitting normally
-            const name = document.getElementById("register-name").value;
-            const username = document.getElementById("register-username").value;
-            const email = document.getElementById("register-email").value;
-            const password = document.getElementById("register-password").value;
+        function registerUser() {
+            const email = document.getElementById('register-email').value;
+            const password = document.getElementById('register-password').value;
 
-            try {
-                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-                const user = userCredential.user;
-
-                await setDoc(doc(db, "users", user.uid), {
-                    name,
-                    username,
-                    email,
-                    createdAt: new Date(),
+            firebase.createUserWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    alert('Registration successful!');
+                    window.location.reload();
+                })
+                .catch((error) => {
+                    alert('Error: ' + error.message);
                 });
-
-                alert("User registered successfully!");
-                window.location.reload();  // Reload the page on successful registration
-            } catch (error) {
-                alert("Error: " + error.message);
-            }
         }
 
         // Login user
-        async function loginUser(event) {
-            event.preventDefault();  // Prevent form from submitting normally
-            const email = document.getElementById("login-username").value;
-            const password = document.getElementById("login-password").value;
+        function loginUser() {
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
 
-            try {
-                const userCredential = await signInWithEmailAndPassword(auth, email, password);
-                const user = userCredential.user;
-                alert("User logged in successfully!");
-                window.location.reload();  // Reload the page on successful login
-            } catch (error) {
-                alert("Error: " + error.message);
-            }
+            firebase.signInWithEmailAndPassword(auth, email, password)
+                .then((userCredential) => {
+                    const user = userCredential.user;
+                    alert('Login successful!');
+                    // Redirect to the desired page
+                    window.location.href = 'https://ram2020-art.github.io/NokiaRouter/';
+                    
+                    // Save user data to Firestore
+                    saveUserData(user);
+                })
+                .catch((error) => {
+                    alert('Error: ' + error.message);
+                });
         }
-    </script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script>
-        // jQuery code for animation (optional)
-        $('.message a').click(function() {
-            $('form').animate({ height: "toggle", opacity: "toggle" }, "slow");
-        });
+        // Save user data to Firestore
+        function saveUserData(user) {
+            const userRef = firebase.doc(db, 'users', user.uid);
+            firebase.setDoc(userRef, {
+                email: user.email,
+                uid: user.uid,
+                lastLogin: new Date()
+            })
+            .then(() => {
+                console.log('User data saved successfully!');
+            })
+            .catch((error) => {
+                console.error('Error saving user data: ', error);
+            });
+        }
     </script>
 </body>
 </html>
