--- a/index.html
+++ b/index.html
@@ -1,122 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login & Register</title>
-    <style>
-        /* General styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #181818;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .form-container {
-            background-color: #1e1e1e;
-            padding: 40px;
-            border-radius: 10px;
-            width: 400px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.7);
-            text-align: center;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: #fff;
-        }
-
-        /* Input fields */
-        input {
-            width: 100%;
-            padding: 12px;
-            margin: 15px 0;
-            border: 1px solid #444;
-            border-radius: 8px;
-            background-color: #2c2c2c;
-            color: white;
-            font-size: 16px;
-            transition: border-color 0.3s ease-in-out;
-        }
-
-        input:focus {
-            outline: none;
-            border-color: #289bb8;
-        }
-
-        /* Button */
-        .btn {
-            width: 100%;
-            padding: 12px;
-            background-color: #289bb8;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        .btn:hover {
-            background-color: #1d75a6;
-        }
-
-        /* Toggle links */
-        .toggle {
-            margin-top: 20px;
-        }
-
-        .toggle a {
-            color: #289bb8;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .toggle a:hover {
-            text-decoration: underline;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 480px) {
-            .form-container {
-                width: 90%;
-            }
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Firebase Login System</title>
 </head>
 <body>
-    <div class="form-container">
-        <!-- Login Form -->
-        <div class="login-form">
-            <h2>Login</h2>
-            <input type="email" id="login-email" placeholder="Email" required />
-            <input type="password" id="login-password" placeholder="Password" required />
-            <button class="btn" id="login-btn">Login</button>
-            <div class="toggle">Don't have an account? <a href="#" onclick="toggleForm()">Sign Up</a></div>
-        </div>
+  <h1>Login and Registration</h1>
 
-        <!-- Register Form -->
-        <div class="register-form" style="display: none;">
-            <h2>Register</h2>
-            <input type="email" id="register-email" placeholder="Email" required />
-            <input type="password" id="register-password" placeholder="Password" required />
-            <button class="btn" id="register-btn">Sign Up</button>
-            <div class="toggle">Already have an account? <a href="#" onclick="toggleForm()">Login</a></div>
-        </div>
-    </div>
+  <div id="auth-section">
+    <h2>Login</h2>
+    <form id="login-form">
+      <input type="email" id="login-email" placeholder="Email" required />
+      <input type="password" id="login-password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
 
-    <!-- Firebase SDKs -->
-    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js"></script>
+    <h2>Register</h2>
+    <form id="register-form">
+      <input type="email" id="register-email" placeholder="Email" required />
+      <input type="password" id="register-password" placeholder="Password" required />
+      <button type="submit">Register</button>
+    </form>
+  </div>
 
-    <script>
+  <!-- Firebase SDKs -->
+  <script>
         // Firebase configuration
         const firebaseConfig = {
             apiKey: "AIzaSyCRKx9cwmDfIplGlZMGOLEJ2FHpr6LLL3E",
@@ -144,7 +53,7 @@
         }
 
         // Register user
-        document.getElementById('register-btn').addEventListener('click', function() {
+        function registerUser() {
             const email = document.getElementById('register-email').value;
             const password = document.getElementById('register-password').value;
             console.log("Registering user with email:", email);
@@ -159,10 +68,10 @@
                     console.error("Registration error:", error);
                     alert('Error: ' + error.message);
                 });
-        });
+        }
 
         // Login user
-        document.getElementById('login-btn').addEventListener('click', function() {
+        function loginUser() {
             const email = document.getElementById('login-email').value;
             const password = document.getElementById('login-password').value;
             console.log("Logging in user with email:", email);
@@ -182,7 +91,7 @@
                     console.error("Login error:", error);
                     alert('Error: ' + error.message);
                 });
-        });
+        }
 
         // Save user data to Firestore
         function saveUserData(user) {
